Skip to content

Playlists random feature doesn't work as expected

As reported in: http://forum.videolan.org/viewtopic.php?f=14&t=79860

With VLC 1.1.1 playlists random feature doesn't work as expected. If one opens xspf playlist with random on, VLC will always play the first file as first item. Also random order is always the same which isn't what most people want. Tested under Win32.

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information