playlist: refactor and fix #3932

When an item gets sub-items, we have to run our own random-picking among
the new items.